# noahsroberts.com

./: .gitignore  README.md  deno.jsonc  package-lock.json  package.json  pyproject.toml  svelte.config.js
_original/: .gitignore  package-lock.json  package.json
_original/config/: global.yml  nav.yml
_original/pages/: index.md  licensing.md
_original/pages/education/: index.md
_original/pages/hobbies/: homelab.md  scouts.md
_original/scssg/: __init__.py  __main__.py  helpers.py  sass.py
_original/scssg/deserializers/: global_conf.py  nav.py
_original/scssg/html/: render.py
_original/templates/: base.html  page.html
_original/templates/components/: footer.html
_original/tests/: sample.yml
config/: nav.yml
pages/: index.md  resume.md
pages/education/: dhc.md  gli.md
pages/hobbies/: code.md  index.md  theatre.md
scrssg/: __main__.py
scssg/: __init__.py  __main__.py  conf.py
scssg/deserializers/: __init__.py  base.py  global.py  global_conf.py  nav.py
scssg/html/: __init__.py  base.py  parse.py  render.py
scssg/serializers/: __init__.py  base.py  nav.py
src/lib/components/: AudioPlayer.svelte  DesktopNavbar.svelte  Details.svelte  DotSeparator.svelte  Footer.svelte  Header.svelte  PdfViewer.svelte  PostList.svelte
src/lib/css/: main.css  (+6 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/css/: nav.css  style.css  style.css.map
static/js/: nav.js
static/sass/: style.sass
templates/: base.html
templates/_original/: page-with-posts.html  portfolio.html
templates/components/: footer.html
tests/: test_serializer.py
(+54 files in other folders)
